--- a/public/_scss/_ContentComponent.scss
+++ b/public/_scss/_ContentComponent.scss
@@ -57,8 +57,10 @@
 
     img {
       height: 100%;
-      max-width: 50%;
+      max-width: 583px;
       display: block;
+
+
     }
 
     @include breakpoint(medium) {
