--- a/public/_scss/_PersonalSummary.scss
+++ b/public/_scss/_PersonalSummary.scss
@@ -19,7 +19,12 @@
 
   @include breakpoint(xxlarge) {
     font-size: 2rem;
-    height: 30vh;
+    max-width: 32em;
+  }
+
+  @include breakpoint(xxxlarge) {
+    font-size: 2rem;
+    max-width: 32em;
   }
 
   h2 {
