--- a/public/_scss/_SiteHeader.scss
+++ b/public/_scss/_SiteHeader.scss
@@ -50,24 +50,25 @@
     }
   }
 
-
   &__nav-item.icon {
-    transition: all 500ms ease-in-out;
-
-    &.twitter:active {
+    &.twitter svg:active {
       fill: darken($color--twitter, 20%);
     }
 
-    &.github:active {
+    &.github svg:active {
       fill: darken($color--github, 20%);
     }
 
-    &.dribbble:active {
+    &.dribbble svg:active {
       fill: darken($color--dribbble, 20%);
     }
 
-    &.medium:active {
+    &.medium svg:active {
       fill: darken($color--medium, 20%);
+    }
+
+    &.linkedin svg:active {
+      fill: darken($color--linkedin, 20%);
     }
 
     &.img:active {
@@ -75,33 +76,27 @@
     }
 
     @include breakpoint(large) {
-      &.twitter:hover {
-        transition: all 200ms ease-in;
-        fill: lighten($color--twitter, 20%);
+      &.twitter svg:hover {
+        fill: lighten($color--twitter, 20%)!important;
       }
 
-      &.github:hover {
-        transition: all 200ms ease-in;
-        fill: lighten($color--github, 20%);
+      &.github svg:hover {
+        fill: lighten($color--github, 20%)!important;
       }
 
-      &.dribbble:hover {
-        transition: all 200ms ease-in;
-        fill: lighten($color--dribbble, 20%);
+      &.dribbble svg:hover {
+        fill: lighten($color--dribbble, 20%)!important;
       }
 
-      &.medium:hover {
-        transition: all 200ms ease-in;
-        fill: lighten($color--medium, 20%);
+      &.medium svg:hover {
+        fill: lighten($color--medium, 20%)!important;
       }
 
-      &.linkedin:hover {
-        transition: all 200ms ease-in;
-        fill: lighten($color--linkedin, 20%);
+      &.linkedin svg:hover {
+        fill: lighten($color--linkedin, 20%)!important;
       }
 
       &.img:hover {
-        transition: all 200ms ease-in;
         filter: grayscale(100%);
       }
     }
