--- a/public/_scss/_base.scss
+++ b/public/_scss/_base.scss
@@ -5,19 +5,18 @@ body {
   text-rendering: optimizeLegibility;
   border-top: 4px solid $color--blue;
   font-size: 16px;
+  -webkit-transform: translate3d(0, 0, 0);
 }
 
 .container {
   max-width: 75em;
   padding: 1em 1em 0;
-
-  @include breakpoint(74.9375em) {
-    margin: 0 auto;
-  }
+  margin: 0 auto;
 
   &__xsmall {
     max-width: 46.25em;
     margin: 0 auto;
+
 
     @include breakpoint(medium) {
       padding: 0;
@@ -25,30 +24,24 @@ body {
   }
 
   &__small {
-    max-width: 60em;
+    max-width: 52em;
     padding: 1em 1em 0;
-
-    @include breakpoint(59.9375em) {
-      margin: 0 auto;
-    }
+    margin: 0 auto;
   }
 
   &__large {
-    max-width: 1200px;
+    max-width: 75em;
     padding: 0 1em;
+    margin: 0 auto;
 
     @include breakpoint(medium) {
       padding: 0 1em;
-      margin: 0 auto;
     }
   }
 
   &__full {
     max-width: 100%;
-    overflow: hidden;
-    @include breakpoint(medium) {
-      margin: 0 auto;
-    }
+    margin: 0 auto;
   }
 
   &__images {
